bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:4: error: ')' expected but '}' found.
} 
^